--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "body-parser": "^1.20.2",
     "chalk": "^4.1.2",
     "common-tags": "^1.8.2",
+    "core": "^1.0.67",
     "discord-api-types": "^0.37.28",
     "discord-embedbuilder": "^4.0.0",
     "discord.js": "^13.15.1",
